--- a/blog.html
+++ b/blog.html
@@ -7,35 +7,35 @@
     <title>Marky | Mef</title>
     <meta name="view-transition" content="same-origin" />
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="css/_blog.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 
 <body>
     
-    <nav>
-        <ul class="nav-list">
-            <li>
-                <a href="index.html">home</a>
+    <nav class="navigations">
+        <ul class="navigations__list">
+            <li class="navigations__item">
+                <a href="index.html" aria-current="page" class="navigations__link navigations__link--1">home</a>
             </li>
-            <li>
-                <a href="about.html">About</a>
+            <li class="navigations__item">
+                <a href="about.html" class="navigations__link navigations__link--2">About</a>
             </li>
-            <li class="active">
-                <a href="blog.html" aria-current="page">Blog</a>
-            </li>
-            <li><a href="#">Another</a></li>
-            <li><a href="#">Page</a></li>
-            <li><a href="#">And anothe</a></li>
+            <li class="navigations__item navigations__item--active">
+                <a href="blog.html" class="navigations__link navigations__link--3">Blog</a>
+            </li class="navigations__item">
+            <li class="navigations__item"><a href="#" class="navigations__link navigations__link--4">Another</a></li>
+            <li class="navigations__item"><a href="#" class="navigations__link navigations__link--5">Page</a></li>
+            <li class="navigations__item"><a href="#" class="navigations__link navigations__link--6">And anothe</a></li>
         </ul>
     </nav>
 
     <main>
         <div class="container">
-            <div class="btn"><a href="">Read More</a></div>
-            <div class="btn"><a href="">Social</a></div>
-            <div class="btn"><a href="">Privacy</a></div>
+            <div class="btn"><a href="#">Read More</a></div>
+            <div class="btn"><a href="#">Social</a></div>
+            <div class="btn"><a href="#">Privacy</a></div>
         </div>
     </main>
 
