--- a/index.html
+++ b/index.html
@@ -13,53 +13,53 @@
 
 <body>
 
-    <nav>
-        <ul class="nav-list">
-            <li class="active">
-                <a href="index.html" aria-current="page">home</a>
+    <nav class="navigations">
+        <ul class="navigations__list">
+            <li class="navigations__item navigations__item--active">
+                <a href="index.html" aria-current="page" class="navigations__link navigations__link--1">home</a>
             </li>
-            <li>
-                <a href="about.html">About</a>
+            <li class="navigations__item">
+                <a href="about.html" class="navigations__link navigations__link--2">About</a>
             </li>
-            <li>
-                <a href="blog.html">Blog</a>
-            </li>
-            <li><a href="#">Another</a></li>
-            <li><a href="#">Page</a></li>
-            <li><a href="#">And anothe</a></li>
+            <li class="navigations__item">
+                <a href="blog.html" class="navigations__link navigations__link--3">Blog</a>
+            </li class="navigations__item">
+            <li class="navigations__item"><a href="#" class="navigations__link navigations__link--4">Another</a></li>
+            <li class="navigations__item"><a href="#" class="navigations__link navigations__link--5">Page</a></li>
+            <li class="navigations__item"><a href="#" class="navigations__link navigations__link--6">And anothe</a></li>
         </ul>
     </nav>
 
         <div class="avatars">
             <picture class="avatars__image">
-                <img src="image/image1.jpg" alt="" class="avatar">
+                <img src="image/image1.jpg" alt="">
             </picture>
             <picture class="avatars__image">
-                <img src="image/image2.jpg" alt="" class="avatar">
+                <img src="image/image2.jpg" alt="">
             </picture>
             <picture class="avatars__image">
-                <img src="image/image3.jpg" alt="" class="avatar">
+                <img src="image/image3.jpg" alt="">
             </picture>
             <picture class="avatars__image">
-                <img src="image/image4.jpg" alt="" class="avatar">
+                <img src="image/image4.jpg" alt="">
             </picture>
             <picture class="avatars__image">
-                <img src="image/image5.jpg" alt="" class="avatar">
+                <img src="image/image5.jpg" alt="">
             </picture>
             <picture class="avatars__image">
-                <img src="image/image1.jpg" alt="" class="avatar">
+                <img src="image/image1.jpg" alt="">
             </picture>
             <picture class="avatars__image">
-                <img src="image/image2.jpg" alt="" class="avatar">
+                <img src="image/image2.jpg" alt="">
             </picture>
             <picture class="avatars__image">
-                <img src="image/image3.jpg" alt="" class="avatar">
+                <img src="image/image3.jpg" alt="">
             </picture>
             <picture class="avatars__image">
-                <img src="image/image4.jpg" alt="" class="avatar">
+                <img src="image/image4.jpg" alt="">
             </picture>
             <picture class="avatars__image">
-                <img src="image/image5.jpg" alt="" class="avatar">
+                <img src="image/image5.jpg" alt="">
             </picture>
         </div>
 
