--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
 
     <title>Marky | Mef</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/_switchers.css">
+    <link rel="stylesheet" href="css/components/_switchers.css">
+
 
     <meta name="view-transition" content="same-origin" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
