--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <title>Marky | Mef</title>
     <meta name="view-transition" content="same-origin" />
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/_blog.css">
+    <link rel="stylesheet" href="css/components/_blog.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
