--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
                 <a href="" class="aside__line"></a>
                 <a href="" class="aside__link"><i class='bx bx-log-in'></i>Logout</a>
                 <a href="" class="aside__link"><i class='bx bx-moon'></i>Dark Mode</a>
-                <label class="label__swither" for="checkbox">
-                    <input class="input__swither" type="checkbox">
-                </label>
+                <div class="switcher">
+                    <input class="switcher__input" id="check" type="checkbox">
+                    <label for="check" class="switcher__label"></label>
+                </div>
 
             </div>
         </aside>
