+ switcher task complete

--- a/index.html
+++ b/index.html
@@ -14,24 +14,37 @@
     <div class="grid-container">
 
         <aside class="aside">
+
             <div class="aside__top">
-                <div class="company__logo">CM</div>
-                <div class="compamy__text">CodingMarky</div>
+
+                <div class="company">
+                    <div class="company__logo">CM</div>
+                    <div class="company__text">CodingMarky</div>
+                </div>
+
             </div>
+
             <div class="aside__content">
-                <a href="" class="aside__link --is-active"><i class='bx bx-home-alt'></i>Dashboard</a>
+
+                <a href="" class="aside__link aside__link--is-active"><i class='bx bx-home-alt'></i>Dashboard</a>
                 <a href="" class="aside__link"><i class='bx bx-windows'></i>Content</a>
                 <a href="" class="aside__link"><i class='bx bx-signal-5'></i>Analytics</a>
                 <a href="" class="aside__link"><i class='bx bx-like'></i>Likes</a>
                 <a href="" class="aside__link"><i class='bx bx-chat'></i>Comments</a>
                 <a href="" class="aside__link"><i class='bx bx-share'></i> Share</a>
-                <a href="" class="aside__line"></a>
+                <span class="aside__link --line"></span>
                 <a href="" class="aside__link"><i class='bx bx-log-in'></i>Logout</a>
-                <a href="" class="aside__link"><i class='bx bx-moon'></i>Dark Mode</a>
-                <div class="switcher">
-                    <input class="switcher__input" id="check" type="checkbox">
-                    <label for="check" class="switcher__label"></label>
-                </div>
+
+                <a href="" class="aside__link">
+                    <i class='bx bx-moon'></i>
+
+                    <span>Dark Mode</span>
+                
+                    <div class="switcher --arg">
+                        <input class="switcher__input" id="check" type="checkbox">
+                        <label for="check" class="switcher__label"></label>
+                    </div>
+                </a>
 
             </div>
         </aside>
