--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
                     <span>Dark Mode</span>
                 
-                    <div class="switcher --arg">
+                    <div class="switcher --mrg">
                         <input class="switcher__input" id="check" type="checkbox">
-                        <label for="check" class="switcher__label"></label>
+                        <label class="switcher__label" for="check"></label>
                     </div>
                 </a>
 
