Task chekbox complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
 
-        <div class="checkbox">
+        <!-- <div class="checkbox">
             <input class="checkbox__input" type="checkbox">
             <mark class="checkbox__label"></mark>
         </div>
@@ -25,6 +25,14 @@
 
             <span class="checkbox__controle">off</span>
             <span class="checkbox__controle">on</span>
+        </div> -->
+
+        <div class="selector">
+            <input class="selector__input" type="checkbox">
+            <mark class="selector__round"></mark>
+            <mark class="selector__round"></mark>
+            <mark class="selector__round"></mark>
+            <mark class="selector__round"></mark>
         </div>
 
         <div class="switch">
