Tick complete task

--- a/index.html
+++ b/index.html
@@ -57,9 +57,29 @@
                     <path d="M5.00569 7.99664C3.81569 5.9355 4.0692 3.44125 5.44809 1.6829C5.84193 1.17839 5.31777 0.457177 4.70506 0.649267C3.98997 0.87737 3.29447 1.23273 2.64921 1.72844C0.245364 3.57818 -0.602202 6.92348 0.63311 9.68977C2.27849 13.3663 6.67626 14.7301 10.0711 12.7701C10.4925 12.5268 10.87 12.2473 11.2184 11.9307C11.6969 11.4928 11.3435 10.6807 10.7005 10.7671C8.41146 11.0956 6.15325 9.99761 5.00569 7.99664Z" fill="white"/>
                     </svg>
             </mark>
-
         </div>
+        
+        <div class="container_tick">
+            <div class="complete">
+                <input class="complete__input" type="checkbox">
+                <mark class="complete__label"></mark>
+            </div>
 
+            <div class="complete --orange">
+                <input class="complete__input" type="checkbox">
+                <mark class="complete__label"></mark>
+            </div>
+
+            <div class="complete --yellow">
+                <input class="complete__input" type="checkbox">
+                <mark class="complete__label"></mark>
+            </div>
+
+            <div class="complete --blue">
+                <input class="complete__input" type="checkbox">
+                <mark class="complete__label"></mark>
+            </div>
+        </div>
     </div>
 
 </body>
