--- a/index.html
+++ b/index.html
@@ -12,8 +12,87 @@
 
 <body>
 
-    
+    <div class="container__tag">
+
+        <div class="tag__tittle">
+            <i class='bx bxs-purchase-tag'></i>
+            <h2>Tags</h2>
+        </div>
+
+
+        <div class="tag__content">
+            <p>Press enter or add a comma after</p>
+
+        <div class="tag__bages">
+            <button class="btn">coding
+                <svg width="12" height="12" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
+                        fill="black" />
+                </svg>
+            </button>
+
+            <button class="btn">javascript
+                <svg width="12" height="12" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
+                        fill="black" />
+                </svg>
+            </button>
+
+            <button class="btn">html
+                <svg width="12" height="12" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
+                        fill="black" />
+                </svg>
+            </button>
+
+            <button class="btn">css
+                <svg width="12" height="12" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
+                        fill="black" />
+                </svg>
+            </button>
+
+            <button class="btn">php
+                <svg width="12" height="12" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
+                        fill="black" />
+                </svg>
+            </button>
+
+            <button class="btn">nodejs
+                <svg width="12" height="12" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
+                        fill="black" />
+                </svg>
+            </button>
+
+            <button class="btn">python
+                <svg width="12" height="12" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
+                        fill="black" />
+                </svg>
+            </button>
+
+        </div>
+
+            <div class="tag__bottom">
+                <p>3 tags are remaining</p>
+                <button class="btn --bottom">Remove All</button>
+            </div>
+        </div>
+
+    </div>
+
+</div>
 
 </body>
 
 </html>
+    
