--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
                     <div class="bages">
                         <span>coding</span>
 
-                        <button>
-                            <svg viewBox="0 0 20 20">
-                                <path
-                                    d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
-                                    fill="currentColor" />
-                            </svg>
-                        </button>
+                        <button class="button"></button>
                     </div>
 
                     <div class="bages">
