--- a/index.html
+++ b/index.html
@@ -25,97 +25,60 @@
 
                 <div class="card-tags__bages">
 
-                    <div class="bages">
+                    <div class="bage">
                         <span>coding</span>
 
-                        <button class="button"></button>
+                        <button class="button --remove"></button>
                     </div>
 
-                    <div class="bages">
+                    <div class="bage">
                         <span>javascript</span>
 
-                        <button>
-                            <svg viewBox="0 0 20 20">
-                                <path
-                                    d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
-                                    fill="currentColor" />
-                            </svg>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
-                    <div class="bages">
+                    <div class="bage">
 
                         <span>html</span>
 
-                        <button>
-                            <svg viewBox="0 0 20 20">
-                                <path
-                                    d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
-                                    fill="currentColor" />
-                            </svg>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
-                    <div class="bages">
+                    <div class="bage">
 
                         <span>css</span>
 
-                        <button>
-                            <svg viewBox="0 0 20 20">
-                                <path
-                                    d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
-                                    fill="currentColor" />
-                            </svg>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
-                    <div class="bages">
+                    <div class="bage">
 
                         <span>php</span>
 
-                        <button>
-                            <svg viewBox="0 0 20 20">
-                                <path
-                                    d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
-                                    fill="currentColor" />
-                            </svg>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
-                    <div class="bages">
+                    <div class="bage">
 
                         <span>nodejs</span>
 
-                        <button>
-                            <svg viewBox="0 0 20 20">
-                                <path
-                                    d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
-                                    fill="currentColor" />
-                            </svg>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
-                    <div class="bages">
+                    <div class="bage">
 
                         <span>python</span>
 
-                        <button>
-                            <svg viewBox="0 0 20 20">
-                                <path
-                                    d="M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z"
-                                    fill="currentColor" />
-                            </svg>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
                 </div>
             </div>
 
             <div class="card-tags__bottom">
                 <p>3 tags are remaining</p>
-                <button class="btn --bottom">Remove All</button>
+                <button class="button">Remove All</button>
             </div>
         </div>
-
 </body>
 
 </html>
