--- a/index.html
+++ b/index.html
@@ -28,55 +28,69 @@
                     <div class="bage">
                         <span>coding</span>
 
-                        <button class="button --remove"></button>
+                        <button class="button --remove">
+                            <i class='bx bx-x'></i>
+                        </button>
                     </div>
 
                     <div class="bage">
                         <span>javascript</span>
 
-                        <button class="button --remove"></button>
+                        <button class="button --remove">
+                            <i class='bx bx-x'></i>
+                        </button>
                     </div>
 
                     <div class="bage">
 
                         <span>html</span>
 
-                        <button class="button --remove"></button>
+                        <button class="button --remove">
+                            <i class='bx bx-x'></i>
+                        </button>
                     </div>
 
                     <div class="bage">
 
                         <span>css</span>
 
-                        <button class="button --remove"></button>
+                        <button class="button --remove">
+                            <i class='bx bx-x'></i>
+                        </button>
                     </div>
 
                     <div class="bage">
 
                         <span>php</span>
 
-                        <button class="button --remove"></button>
+                        <button class="button --remove">
+                            <i class='bx bx-x'></i>
+                        </button>
                     </div>
 
                     <div class="bage">
 
                         <span>nodejs</span>
 
-                        <button class="button --remove"></button>
+                        <button class="button --remove">
+                            <i class='bx bx-x'></i>
+                        </button>
                     </div>
 
                     <div class="bage">
 
                         <span>python</span>
 
-                        <button class="button --remove"></button>
+                        <button class="button --remove">
+                            <i class='bx bx-x'></i>
+                        </button>
                     </div>
                 </div>
             </div>
 
             <div class="card-tags__bottom">
                 <p>3 tags are remaining</p>
-                <button class="button">Remove All</button>
+                <button class="button --bottom">Remove All</button>
             </div>
         </div>
 </body>
