box-icons before

--- a/index.html
+++ b/index.html
@@ -28,62 +28,48 @@
                     <div class="bage">
                         <span>coding</span>
 
-                        <button class="button --remove">
-                            <i class='bx bx-x'></i>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
                     <div class="bage">
                         <span>javascript</span>
 
-                        <button class="button --remove">
-                            <i class='bx bx-x'></i>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
                     <div class="bage">
 
                         <span>html</span>
 
-                        <button class="button --remove">
-                            <i class='bx bx-x'></i>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
                     <div class="bage">
 
                         <span>css</span>
 
-                        <button class="button --remove">
-                            <i class='bx bx-x'></i>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
                     <div class="bage">
 
                         <span>php</span>
 
-                        <button class="button --remove">
-                            <i class='bx bx-x'></i>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
                     <div class="bage">
 
                         <span>nodejs</span>
 
-                        <button class="button --remove">
-                            <i class='bx bx-x'></i>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
 
                     <div class="bage">
 
                         <span>python</span>
 
-                        <button class="button --remove">
-                            <i class='bx bx-x'></i>
-                        </button>
+                        <button class="button --remove"></button>
                     </div>
                 </div>
             </div>
