--- a/index 1.html
+++ b/index 1.html
@@ -5,34 +5,41 @@
 <head>
 
     <title>Marky | CheckBox - Coding</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style1.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+    <link rel="stylesheet" href="iconfonts.css"></head>
 </head>
 
 <body>
 
-    <div class="tag_container">
+    <div class="container">
 
-        <div class="tag__text">
-            <i class='bx bxs-purchase-tag' ></i>
-            <h2>Tags</h2>
+        <div class="icons">
+            <div class="icon__ilon"></div>
+            <div class="icon__viber"></div>
+            <div class="icon__viber-solid"></div>
+            <div class="icon__github"></div>
+            <div class="icon__github-solid"></div>
+            <div class="icon__figma"></div>
+            <div class="icon__figma-solid"></div>
+            <div class="icon__inst"></div>
+            <div class="icon__inst-solid"></div>
+            <div class="icon__false"></div>
         </div>
 
-        <div class="tag_content">
-            <p>Press enter or add a comma after each tag</p>
+        <div class="icons --small">
+            <div class="icon__ilon"></div>
+            <div class="icon__viber"></div>
+            <div class="icon__viber-solid"></div>
+            <div class="icon__github"></div>
+            <div class="icon__github-solid"></div>
+            <div class="icon__figma"></div>
+            <div class="icon__figma-solid"></div>
+            <div class="icon__inst"></div>
+            <div class="icon__inst-solid"></div>
+            <div class="icon__false"></div>
+        </div>
         
-        <div class="tag-box">
-            <ul>
-                <li>html <i class='bx bx-x'></i></li>
-                <li>css <i class='bx bx-x'></i></li>
-                <input type="text">
-            </ul>
-        </div>
-
-    <div class="tag__bottom">
-        <p><span>10</span> tags are remaining</p>
-        <button>Remove All</button>
     </div>
 
 </div>
