--- a/index 1.html
+++ b/index 1.html
@@ -7,42 +7,75 @@
     <title>Marky | CheckBox - Coding</title>
     <link rel="stylesheet" href="css/style1.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="iconfonts.css"></head>
+    <link rel="stylesheet" href="iconfonts.css">
 </head>
 
 <body>
 
-    <div class="container">
-
-        <div class="icons">
-            <div class="icon__ilon"></div>
-            <div class="icon__viber"></div>
-            <div class="icon__viber-solid"></div>
-            <div class="icon__github"></div>
-            <div class="icon__github-solid"></div>
-            <div class="icon__figma"></div>
-            <div class="icon__figma-solid"></div>
-            <div class="icon__inst"></div>
-            <div class="icon__inst-solid"></div>
-            <div class="icon__false"></div>
+    <div class="icons">
+        <div class="icons__icon">
+            <span class="mki-ilon"></span>
         </div>
-
-        <div class="icons --small">
-            <div class="icon__ilon"></div>
-            <div class="icon__viber"></div>
-            <div class="icon__viber-solid"></div>
-            <div class="icon__github"></div>
-            <div class="icon__github-solid"></div>
-            <div class="icon__figma"></div>
-            <div class="icon__figma-solid"></div>
-            <div class="icon__inst"></div>
-            <div class="icon__inst-solid"></div>
-            <div class="icon__false"></div>
+        <div class="icons__icon">
+            <span class="mki-viber"></span>
         </div>
-        
+        <div class="icons__icon">
+            <span class="mki-viber_solid"></span>
+        </div>
+        <div class="icons__icon">
+            <span class="mki-github"></span>
+        </div>
+        <div class="icons__icon">
+            <span class="mki-github_solid"></span>
+        </div>
+        <div class="icons__icon">
+            <span class="mki-Figma"></span>
+        </div>
+        <div class="icons__icon">
+            <span class="mki-Figma_solid"></span>
+        </div>
+        <div class="icons__icon">
+            <span class="mki-Instagram"></span>
+        </div>
+        <div class="icons__icon">
+            <span class="mki-Instagram_solid"></span>
+        </div>
+        <div class="icons__icon">
+            <span class="mki-False"></span>
+        </div>
+    
+        <div class="icons__icon --small">
+            <span class="mki-ilon"></span>
+        </div>
+        <div class="icons__icon --small">
+            <span class="mki-viber"></span>
+        </div>
+        <div class="icons__icon --small">
+            <span class="mki-viber_solid"></span>
+        </div>
+        <div class="icons__icon --small">
+            <span class="mki-github"></span>
+        </div>
+        <div class="icons__icon --small">
+            <span class="mki-github_solid"></span>
+        </div> 
+        <div class="icons__icon --small">
+            <span class="mki-Figma"></span>
+        </div>
+        <div class="icons__icon --small">
+            <span class="mki-Figma_solid"></span>
+        </div>
+        <div class="icons__icon --small">
+            <span class="mki-Instagram"></span>
+        </div>
+        <div class="icons__icon --small">
+            <span class="mki-Instagram_solid"></span>
+        </div>
+        <div class="icons__icon --small">
+            <span class="mki-False"></span>
+        </div>
     </div>
 
-</div>
 
 </body>
 
