--- a/index.html
+++ b/index.html
@@ -4,81 +4,19 @@
 
 <head>
 
-    <title>Marky | CheckBox - Coding</title>
+    <title>Marky | Coding</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 
 <body>
-    <div class="container">
-        <div class="card-tags">
 
-            <header class="card-tags__top">
-                <i class='bx bxs-purchase-tag'></i>
-                <h2>Tags</h2>
-            </header>
+    <div class="checkbox">
+        <input class="checkbox__input" type="checkbox">
+        <mark class="checkbox__label"></mark>
+    </div>
 
-
-            <div class="card-tags__content">
-                <p>Press enter or add a comma after</p>
-
-                <div class="card-tags__bages">
-
-                    <div class="bage">
-                        <span>coding</span>
-
-                        <button class="button --remove"></button>
-                    </div>
-
-                    <div class="bage">
-                        <span>javascript</span>
-
-                        <button class="button --remove"></button>
-                    </div>
-
-                    <div class="bage">
-
-                        <span>html</span>
-
-                        <button class="button --remove"></button>
-                    </div>
-
-                    <div class="bage">
-
-                        <span>css</span>
-
-                        <button class="button --remove"></button>
-                    </div>
-
-                    <div class="bage">
-
-                        <span>php</span>
-
-                        <button class="button --remove"></button>
-                    </div>
-
-                    <div class="bage">
-
-                        <span>nodejs</span>
-
-                        <button class="button --remove"></button>
-                    </div>
-
-                    <div class="bage">
-
-                        <span>python</span>
-
-                        <button class="button --remove"></button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card-tags__bottom">
-                <p>3 tags are remaining</p>
-                <button class="button --bottom">Remove All</button>
-            </div>
-        </div>
 </body>
 
 </html>
