--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Marky | Coding</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="iconfonts.css">
+    <link rel="stylesheet" href="iconmarchik.css">
 
 </head>
 
@@ -15,27 +15,7 @@
 
     <div class="checkbox">
         <input class="checkbox__input" type="checkbox">
-        <mark class="checkbox__label">
-            <span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                    <circle cx="12" cy="12" r="3" stroke="#33363F" stroke-width="2" />
-                    <path d="M12 5V3" stroke="#33363F" stroke-width="2" stroke-linecap="round" />
-                    <path d="M12 21V19" stroke="#33363F" stroke-width="2" stroke-linecap="round" />
-                    <path d="M16.9498 7.05025L18.364 5.63604" stroke="#33363F" stroke-width="2" stroke-linecap="round" />
-                    <path d="M5.63608 18.364L7.05029 16.9497" stroke="#33363F" stroke-width="2" stroke-linecap="round" />
-                    <path d="M19 12L21 12" stroke="#33363F" stroke-width="2" stroke-linecap="round" />
-                    <path d="M3 12L5 12" stroke="#33363F" stroke-width="2" stroke-linecap="round" />
-                    <path d="M16.9498 16.9497L18.364 18.364" stroke="#33363F" stroke-width="2" stroke-linecap="round" />
-                    <path d="M5.63608 5.63603L7.05029 7.05025" stroke="#33363F" stroke-width="2" stroke-linecap="round" />
-                </svg>
-            </span>
-
-            <span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M15 4C15.292 4 15.438 4 15.5781 4.04183C16.192 4.22522 16.4775 4.93111 16.1637 5.48976C16.0921 5.61719 15.8744 5.82779 15.4389 6.249C13.935 7.70352 13 9.74257 13 12C13 14.2574 13.935 16.2965 15.4389 17.751C15.8744 18.1722 16.0921 18.3828 16.1637 18.5102C16.4775 19.0689 16.192 19.7748 15.5781 19.9582C15.438 20 15.292 20 15 20C10.5817 20 7 16.4183 7 12C7 7.58172 10.5817 4 15 4Z" fill="#222222"/>
-                    </svg>
-            </span>
-        </mark>
+        <mark class="checkbox__label"></mark>
     </div>
 
 </body>
