add script [filed]

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         </mark>
     </div>
 
+    <script>
+        const checkbox = document.getElementById ("checkbox")
+        checkbox.addEventListener("change", () => {
+            document.body.classlist.toggle("dark-mdoe")
+        })
+    </script>
 </body>
 
 </html>
