--- a/index 2.html
+++ b/index 2.html
@@ -29,7 +29,6 @@
             </div>
 
             <div class="block-links__link">
-                <div class="link__icon --top">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path
                             d="M16.5 21H7.5C5.0187 21 3 18.9813 3 16.5V7.5C3 5.0187 5.0187 3 7.5 3H16.5C18.9813 3 21 5.0187 21 7.5V16.5C21 18.9813 18.9813 21 16.5 21ZM7.5 4.5C5.8458 4.5 4.5 5.8458 4.5 7.5V16.5C4.5 18.1542 5.8458 19.5 7.5 19.5H16.5C18.1542 19.5 19.5 18.1542 19.5 16.5V7.5C19.5 5.8458 18.1542 4.5 16.5 4.5H7.5Z" />
@@ -38,31 +37,25 @@
                         <path
                             d="M16.9499 8.1C17.5298 8.1 17.9999 7.6299 17.9999 7.05C17.9999 6.4701 17.5298 6 16.9499 6C16.37 6 15.8999 6.4701 15.8999 7.05C15.8999 7.6299 16.37 8.1 16.9499 8.1Z">
                     </svg>
-                </div>
             </div>
 
             <div class="block-links__link --2">
-                <div class="link__icon --top">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path
                             d="M11.459 13.761L5.86537 20.2433C5.71717 20.4132 5.50917 20.5002 5.29997 20.5002C5.12497 20.5002 4.94927 20.4393 4.80717 20.3153C4.49507 20.0429 4.46287 19.5692 4.73527 19.2571L10.5069 12.5709L11.459 13.761ZM13.4938 11.4294L19.2654 4.74317C19.5378 4.43107 19.5056 3.95737 19.1935 3.68497C18.8815 3.41257 18.4075 3.44477 18.1353 3.75687L12.5417 10.2392L13.4938 11.4294Z" />
                         <path
                             d="M20.0501 20.5H16.1501C15.9222 20.5 15.7068 20.3964 15.5645 20.2185L3.36454 4.7185C3.18444 4.4934 3.14934 4.1849 3.27424 3.9251C3.39914 3.6653 3.66184 3.5 3.95014 3.5H7.85014C8.07804 3.5 8.29344 3.6036 8.43574 3.7815L20.6357 19.2815C20.8158 19.5066 20.8509 19.8151 20.726 20.0749C20.6011 20.3347 20.3384 20.5 20.0501 20.5ZM16.5106 19H18.4896L7.48964 5H5.51064L16.5106 19Z" />
                     </svg>
-                </div>
             </div>
 
             <div class="block-links__link --3">
-                <div class="link__icon --bottom">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path
                             d="m12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.385-1.335-1.755-1.335-1.755-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57 4.801-1.574 8.236-6.074 8.236-11.369 0-6.627-5.373-12-12-12" />
                     </svg>
-                </div>
             </div>
 
             <div class="block-links__link --4">
-                <div class="link__icon --bottom">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         viewBox="0 -28.5 256 256" version="1.1" preserveAspectRatio="xMidYMid">
                         <g>
@@ -73,7 +66,6 @@
                             </path>
                         </g>
                     </svg>
-                </div>
             </div>
 
         </div>
@@ -84,14 +76,12 @@
 
     <script>
 
-        const body = document.body;
         const btn = document.querySelector('.block-links__share-icon');
-
-        const element = document.querySelector(".block-links__link", ".block-links__link --2", ".block-links__link.--3", ".block-links__link.--4");
+        const element = document.querySelector(".block-links");
 
         btn.addEventListener('click', () => {
-            element.classList.add("--123");
-
+            element.classList.toggle("--is-show");
+            console.log("Нажатие Кнопки")
         });
 
     </script>
