--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 
             <div class="menu__nav">
                 <div class="menu__first">
-                    <a href="">The brand</a>
-                    <a href="">Collection</a>
-                    <a href="">Inspration</a>
-                    <a href="">News</a>
-                    <a href="">Our network</a>
+                    <a href="">The brand</a> <br/>
+                    <a href="">Collection</a> <br/>
+                    <a href="">Inspration</a> <br/>
+                    <a href="">News</a> <br/>
+                    <a href="">Our network</a> <br/>
 
-                    <a href="">Architects</a>
-                    <a href="">Contract</a>
+                    <a href="">Architects</a><br/>
+                    <a href="">Contract</a><br/>
                 </div>
 
                 <div class="menu__second">
-                    <a href="">Identity</a>
-                    <a href="">Designers</a>
-                    <a href="">Production</a>
+                    <a href="">Identity</a><br/>
+                    <a href="">Designers</a><br/>
+                    <a href="">Production</a><br/>
                 </div>
             </div>
 
@@ -79,35 +79,6 @@
             </div>
         </div>
     </section>
-
-    <style>
-        .menu {
-            display: flex;
-            justify-content: center;
-            align-content: center;
-
-            min-width: 100vw;
-            min-height: 100vh;
-        }
-
-        .menu__main {
-            display: flex;
-            flex-direction: column;
-            flex: 1 1;
-        }
-
-        .menu__aside {
-            color: white;
-            background: black;
-        }
-
-        @media (max-width: 720px) {
-            .menu {
-                flex-direction: column;
-                background-color: red;
-            }
-        }
-    </style>
 
 </body>
 
