--- a/index.html
+++ b/index.html
@@ -14,27 +14,24 @@
 <body>
     <section class="menu">
         <button class="menu__btn-close"></button>
-        
+
         <div class="menu__main">
             <div class="menu__logo-company"><a href="">/ HOME</a></div>
 
             <div class="menu__nav">
 
-                <div class="menu__first">
-                    <a href="">The brand</a> <br />
-                    <a href="">Collection</a> <br />
-                    <a href="">Inspration</a> <br />
-                    <a href="">News</a> <br />
-                    <a href="">Our network</a> <br />
+                <a class="menu__nav-link" href="">The brand</a>
+                <a class="menu__nav-link" href="">Collection</a>
+                <a class="menu__nav-link" href="">Inspration</a>
+                <a class="menu__nav-link" href="">News</a>
+                <a class="menu__nav-link" href="">Our network</a>
+                <a class="menu__nav-link" href="">Architects</a>
+                <a class="menu__nav-link" href="">Contract</a>
 
-                    <a href="">Architects</a><br />
-                    <a href="">Contract</a><br />
-                </div>
-
-                <div class="menu__second">
-                    <a href="">Identity</a><br />
-                    <a href="">Designers</a><br />
-                    <a href="">Production</a><br />
+                <div class="menu__nav-small">
+                    <a href="">Identity</a>
+                    <a href="">Designers</a>
+                    <a href="">Production</a>
                 </div>
             </div>
 
