--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
         </div>
     </section>
 
+    <script>
+
+
+    const menu = document.querySelector('.menu')
+    const buttonMenu = document.querySelector('.menu__btn-close')
+
+
+       buttonMenu.addEventListener('click', ()=> (
+        menu.classList.toggle('--is-active')
+       ))
+
+
+    </script>
+
 </body>
 
 </html>
